{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 29,
  "lineage": "1f455d6e-4f83-8631-1c97-4451717e6e1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:590183793728:instance/i-03ea7b60349357f61",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_instance_profile",
            "id": "i-03ea7b60349357f61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc4a8c2086c47c0e",
            "private_dns": "ip-10-0-2-69.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.69",
            "public_ip": "65.0.185.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07e5cc6bf2422aba4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07910529364469993",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bd81432ddb4b19f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.webserver",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590183793728:internet-gateway/igw-02ed96013c9795102",
            "id": "igw-02ed96013c9795102",
            "owner_id": "590183793728",
            "tags": {
              "Name": "webserver-igw"
            },
            "tags_all": {
              "Name": "webserver-igw"
            },
            "vpc_id": "vpc-046228e790a7f71ab"
          },
          "dependencies": [
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590183793728:route-table/rtb-08b73c4fa084fed79",
            "id": "rtb-08b73c4fa084fed79",
            "owner_id": "590183793728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ed96013c9795102",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webserver-route-table"
            },
            "tags_all": {
              "Name": "webserver-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-046228e790a7f71ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webserver",
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0979ca9beb0b35678",
            "route_table_id": "rtb-08b73c4fa084fed79",
            "subnet_id": "subnet-07910529364469993"
          },
          "dependencies": [
            "aws_internet_gateway.webserver",
            "aws_route_table.webserver",
            "aws_subnet.webserver_subnet",
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590183793728:security-group/sg-08bd81432ddb4b19f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bd81432ddb4b19f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240627183333030900000001",
            "name_prefix": "terraform-",
            "owner_id": "590183793728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-security-group"
            },
            "tags_all": {
              "Name": "webserver-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-046228e790a7f71ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590183793728:subnet/subnet-07910529364469993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07910529364469993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183793728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webserver-subnet"
            },
            "tags_all": {
              "Name": "webserver-subnet"
            },
            "vpc_id": "vpc-046228e790a7f71ab"
          },
          "dependencies": [
            "aws_vpc.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590183793728:vpc/vpc-046228e790a7f71ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055081ff276047706",
            "default_route_table_id": "rtb-0d6f548fee8031ab6",
            "default_security_group_id": "sg-069e59bf635418d02",
            "dhcp_options_id": "dopt-084b9b5e7b98d4af4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046228e790a7f71ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6f548fee8031ab6",
            "owner_id": "590183793728",
            "tags": {
              "Name": "web-server-vpc"
            },
            "tags_all": {
              "Name": "web-server-vpc"
            }
          }
        }
      ]
    }
  ]
}